k8s-specifications/infra/loki-dns-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app
  namespace: voting-app
spec:
  type: ExternalName
  externalName: voting-app-loki.voting-app.svc.cluster.local
  ports:
    - port: 3100
